# WorkBy

./: README.md  render.yaml  requirements.txt
freelance_platform/: .env-example  .gitignore  .pylintrc  .venv-requirements.txt  README.md  add_balance.py  build.sh  check_deployment.py  clean_demo_conversation.py  clean_test_messages.py  cleanup.py  compile_translations.py  create_database.py  create_db.sql  create_test_users.py  db.sqlite3  db_export.py  direct_compile.py  fill_category_translations.py  fix_all_translations.py  fix_line.txt  fix_project_data.py  fix_ssl_config.py  fix_translations.py  generate_ssl_cert.py  migrate_to_postgres.py  populate_test_data.py  purge_all_test_data.py  pyproject.toml  pyrightconfig.json  remove_duplicate_translations.py  render.yaml  requirements-prod.txt  requirements.txt  restart_server.py  run_dev_server.bat  run_dev_server.py  run_ssl_server.bat  run_ssl_server.py  setup.py  (+6 more)
freelance_platform/.github/workflows/: ci.yml
freelance_platform/accounts/: forms.py  models.py  signals.py  urls.py  views.py
freelance_platform/accounts/migrations/: 0003_set_dark_mode_default_to_true.py  0004_alter_user_dark_mode.py  0005_freelancerprofile_communication_rating_and_more.py  0006_user_location.py  0007_alter_user_preferred_language.py
freelance_platform/accounts/templatetags/: accounts_tags.py  (+1 more)
freelance_platform/chat/: models.py  support_bot.py  support_views.py  test_views.py  urls.py  views.py
freelance_platform/core/: views.py
freelance_platform/freelance_core/: create_test_data.py  settings.py  urls.py  views.py
freelance_platform/jobs/: context_processors.py  forms.py  models.py  notifications.py  recommendations.py  translation.py  urls.py  views.py
freelance_platform/media/: .gitkeep
freelance_platform/payments/: __init__.py  admin.py  context_processors.py  epay.py  forms.py  models.py  translation.py  urls.py  views.py  yoomoney.py
freelance_platform/scripts/: check_for_git_conflicts.py
freelance_platform/ssl_cert/: server.crt  server.key
freelance_platform/static/: robots.txt  sitemap.xml
freelance_platform/templates/: 400.html  403.html  404.html  500.html  base.html  test_button.html
freelance_platform/tests/: __init__.py  test_accounts.py
freelance_platform/typings/: project.pyi  translation.pyi
(+141 files in other folders)
